# vlcAsVcam

./: .gitignore  CMakeLists.txt  README.md  build.sh
lua/extensions/: VCam.lua
src/: ndi_minimal.h  vcam_plugin.cpp
tools/: vcam_receiver.py
